# bola1

./: .gitignore  LICENSE
app/api/: .env.example  README.md  alembic.ini  pyproject.toml
app/api/alembic/: env.py
app/api/alembic/versions/: 0001_initial.py  0002_match_external_id.py
app/api/src/bola1_api/: main.py
app/api/src/bola1_api/api/v1/: activities.py  admin.py  auth.py  deps.py  groups.py  matches.py  predictions.py  rankings.py  router.py  users.py
app/api/src/bola1_api/core/: config.py  cors.py  security.py
app/api/src/bola1_api/db/: base.py  session.py
app/api/src/bola1_api/models/: __init__.py  activity.py  enums.py  group.py  match.py  prediction.py  team.py  user.py
app/api/src/bola1_api/repositories/: activities.py  groups.py  matches.py  predictions.py  users.py
app/api/src/bola1_api/schemas/: __init__.py  activity.py  auth.py  group.py  match.py  prediction.py  ranking.py  team.py  user.py
app/api/src/bola1_api/scripts/: cleanup_duplicate_matches.py  create_superuser.py  seed.py
app/api/src/bola1_api/services/: activities.py  auth.py  auto_sync.py  football_api.py  groups.py  matches.py  predictions.py  rankings.py  scoring.py
app/api/tests/: conftest.py  test_activities.py  test_auth.py  test_cleanup_duplicate_matches.py  test_football_api_sync.py  test_groups.py  test_matches.py  test_migrations.py  test_postgres_smoke.py  test_predictions.py  test_rankings.py  test_scoring.py  test_users.py
app/web/: package-lock.json  package.json
app/web/app/: globals.css  layout.tsx
app/web/lib/: context.tsx  (+2 more)
scripts/: check_signup.py
(+33 files in other folders)
