[project]
name = "bola1-api"
version = "0.1.0"
description = "FastAPI backend for bola1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "bcrypt<5",
  "email-validator>=2.3.0",
  "fastapi>=0.124.0",
  "httpx>=0.28.1",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.3.0",
  "pydantic-settings>=2.12.0",
  "pyjwt>=2.10.1",
  "python-dotenv>=1.2.1",
  "sqlalchemy>=2.0.45",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "postgres: safe read-only smoke tests against the configured PostgreSQL database",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
